Use staging-api URL for BRD tests

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1029,7 +1029,7 @@ lighthouse:
       rsa_key: ~
       aud_claim_url: https://deptva-eval.okta.com/oauth2/ausftw7zk6eHr7gMN2p7/v1/token
   benefits_reference_data:
-    url: https://sandbox-api.va.gov
+    url: https://staging-api.va.gov
     path: services/benefits-reference-data
     version: v1
   direct_deposit:
