--- a/config/features.yml
+++ b/config/features.yml
@@ -463,13 +463,9 @@ features:
     actor_type: user
     description: Enables frontend of Find a Representative
     enable_in_development: true
-  flag_a_representative_enable_api:
+  flag_a_representative:
     actor_type: user
-    description: Enables the flag a rep endpoint in Find a Rep
-    enable_in_development: true
-  flag_a_representative_enable_frontend:
-    actor_type: user
-    description: Enables the frontend of flag a rep in Find a Rep
+    description: Enables flag a rep for Find a Rep
     enable_in_development: true
   form526_legacy:
     actor_type: user
