--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -225,6 +225,8 @@ lighthouse:
         client_id: abc123456
         rsa_key: path/to/key
       use_mocks: false
+  benefits_reference_data:
+    url: https://staging-api.va.gov
 
 rrd:
   alerts:
