--- a/modules/veteran/app/docs/veteran/v0/accreditation.yaml
+++ b/modules/veteran/app/docs/veteran/v0/accreditation.yaml
@@ -30,6 +30,8 @@ paths:
           schema:
             type: number
             format: float
+            minimum: -90
+            maximum: 90
           description: Latitude for the search location.
         - in: query
           name: long
@@ -37,13 +39,15 @@ paths:
           schema:
             type: number
             format: float
+            minimum: -180
+            maximum: 180
           description: Longitude for the search location.
         - in: query
           name: type
           required: true
           schema:
             type: string
-          description: Type of accredited representative (e.g., attorney).
+          description: Type of accredited representative (e.g., attorney or claim_agents).
         - in: query
           name: name
           schema:
@@ -103,6 +107,8 @@ paths:
           schema:
             type: number
             format: float
+            minimum: -90
+            maximum: 90
           description: Latitude for the search location.
         - in: query
           name: long
@@ -110,6 +116,8 @@ paths:
           schema:
             type: number
             format: float
+            minimum: -180
+            maximum: 180
           description: Longitude for the search location.
         - in: query
           name: type
