7861 cerner facility transition (#15334)
* 7861: add hasFacilityTransitioningToCerner to mobile v2 user endpoint

--- a/config/features.yml
+++ b/config/features.yml
@@ -1174,6 +1174,9 @@ features:
   move_form_back_button:
     actor_type: user
     description: Test moving form back button to the top of the page
+  mobile_cerner_transition:
+    actor_type: user
+    description: For mobile app, a facility is being transitioned to cerner.
   mobile_lighthouse_letters:
     actor_type: user
     description: For mobile app, use Lighthouse instead of EVSS for our letters endpoints upstream service
