--- a/.github/workflows/check-git-log.yml
+++ b/.github/workflows/check-git-log.yml
@@ -47,7 +47,7 @@ jobs:
     needs: [check-git-log]
     steps:
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@010d0da01d0b5a38af31e9c3470dbfdabdecca3a # v4.0.1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
