--- a/config/features.yml
+++ b/config/features.yml
@@ -1003,6 +1003,10 @@ features:
     actor_type: user
     description: Allows veterans to view their VA and Community Care appointments
     enable_in_development: true
+  va_online_scheduling_booking_exclusion:
+    actor_type: user
+    description: Permits the exclusion of Lovell sites from being scheduled prior to Oracle Health cutover
+    enable_in_development: true 
   va_online_scheduling_cancel:
     actor_type: user
     description: Allows veterans to cancel VA appointments
