--- a/config/features.yml
+++ b/config/features.yml
@@ -649,6 +649,10 @@ features:
     actor_type: user
     description: Enables/disables Secure Messaging Phase 1 on VA.gov
     enable_in_development: true
+  mhv_secure_messaging_cerner_pilot:
+    actor_type: user
+    description: Enables/disables Secure Messaging Cerner Transition Pilot environment on VA.gov
+    enable_in_development: true
   mhv_secure_messaging_blocked_triage_group_1_0:
     actor_type: user
     description: Enables/disables Secure Messaging Blocked Triage Group functionality on VA.gov
