--- a/config/features.yml
+++ b/config/features.yml
@@ -453,6 +453,10 @@ features:
     actor_type: user
     description: Enables Find a Representative tool
     enable_in_development: true
+  find_a_representative_enable_frontend:
+    actor_type: user
+    description: Enables Find a Representative frontend
+    enable_in_development: true
   find_a_representative_flag_results_enabled:
     actor_type: user
     description: Enables flag a rep for Find a Rep
