71975 add caregiver RUM feature flag

--- a/config/features.yml
+++ b/config/features.yml
@@ -33,6 +33,9 @@ features:
   caregiver_use_facilities_API:
     actor_type: user
     description: Allow list of caregiver facilites to be fetched by way of the Facilities API.
+  caregiver_real_time_monitoring:
+    actor_type: user
+    description: Enables Datadog Real Time User Monitoring
   hca_browser_monitoring_enabled:
     actor_type: user
     description: Enables browser monitoring for the health care application.
