--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1639,6 +1639,14 @@ form1095_b:
     enabled: true
     region: "region"
 
+ivc_forms:
+  s3:
+    aws_access_key_id: ~
+    aws_secret_access_key: ~
+    bucket: "bucket"
+    enabled: true
+    region: "region"
+
 coverband:
   github_organization: ~
   github_team: ~
