--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,5 @@ node_modules
 # Ignore public folder (used for local document uploads)
 public
 
+# Ignore development setup (native, docker, hybrid)
+.developer-environment
