added facility id filtering to exclude lovell sites.

--- a/spec/support/vcr_cassettes/vaos/v2/mobile_facility_service/get_facilities_200_schedulable_false_required.yml
+++ b/spec/support/vcr_cassettes/vaos/v2/mobile_facility_service/get_facilities_200_schedulable_false_required.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://veteran.apps.va.gov/facilities/v2/facilities?ids=983,%20983GB,%20983GC,%20983GD&pageSize=0&schedulable=false
+    uri: https://veteran.apps.va.gov/facilities/v2/facilities?ids=983,983GB,983GC,983GD&pageSize=0&schedulable=false
     body:
       encoding: US-ASCII
       string: ''
