--- a/config/features.yml
+++ b/config/features.yml
@@ -1253,6 +1253,10 @@ features:
   nod_browser_monitoring_enabled:
     actor_type: user
     description: NOD Datadog RUM monitoring
+  nod_callbacks_endpoint:
+    actor_type: user
+    description: NOD VANotify notification callbacks endpoint
+    enable_in_development: true
   hlr_browser_monitoring_enabled:
     actor_type: user
     description: HLR Datadog RUM monitoring
