--- a/spec/support/vcr_cassettes/vaos/v2/mobile_facility_service/get_multi_facilities_with_children_schedulable_true_200.yml
+++ b/spec/support/vcr_cassettes/vaos/v2/mobile_facility_service/get_multi_facilities_with_children_schedulable_true_200.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://veteran.apps.va.gov/facilities/v2/facilities?children=true&ids=983,984&pageSize=0&schedulable=true
+    uri: https://veteran.apps.va.gov/facilities/v2/facilities?children=true&ids=983,%20984&pageSize=0&schedulable=true
     body:
       encoding: US-ASCII
       string: ''
