Adding back inactive ratings filtering logic

--- a/spec/support/vcr_cassettes/lighthouse/veteran_verification/show/200_response.yml
+++ b/spec/support/vcr_cassettes/lighthouse/veteran_verification/show/200_response.yml
@@ -104,7 +104,7 @@ http_interactions:
           "description": "Service Connected",
           "decision": "Service Connected",
           "effective_date": "2018-03-12",
-          "rating_end_date": null,
+          "rating_end_date": "2020-10-05",
           "rating_percentage": 30,
           "diagnostic_type_code": "6260",
           "diagnostic_type_name": "Tinnitus",          
