Add `travel_pay_power_switch` flag
Because we're integrating with an upstream API at the same time
the upstream API is being built, I wanted to make sure that we
could closely control whether or not the vets-api endpoint were
available.

This does not mean the `power_switch` flag will live on forever,
it should and will be retired when the feature is in prod and
correctly integrated.

--- a/config/features.yml
+++ b/config/features.yml
@@ -1283,3 +1283,9 @@ features:
   yellow_ribbon_search_enhancement:
     actor_type: user
     description: Enable changes to Find a Yellow Ribbon school search functionality
+  travel_pay_power_switch:
+    actor_type: user
+    description: >-
+      Main switch for the Travel Pay feature on VA.gov using the new BTSSS (travel pay) API.
+      Enabled - Requests are handled as normal.
+      Disabled - Requests are not handled. Server returns a 503 (Service Unavailable) until re-enabled.
