Add "ping" support
Adds support for a caller to request `/travel_pay/claims/` and hit the
ping endpoint of our upstream service. This is temporary, to test
integration in our dev environment and theirs.

In the future, we will not use the ping enpoint (except maybe in
synthetic tests). Also, we will likely not maintain the dev-to-dev
integration between vets-api and our upstream. We prefer to reduce
confusion by using fake data in dev.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1670,6 +1670,12 @@ brd:
   api_key: 'fake_key'
   base_name: 'https://something.fake.va.gov'
 
+
+travel_pay:
+  auth_url: https://login.microsoftonline.us
+  tenant_id: abcdefgh-1234-5678-12345-11e8b8ce491e
+  service_name: BTSSS-API
+
 xlsx_file_fetcher:
   github_access_token: ~
 
